# cursor-agent-sdk-python

./: .git-meta  LICENSE  README.md  pyproject.toml
examples/: file_editing.py  quick_start.py  test_tools_and_mcp.py
src/cursor_agent_sdk/: __init__.py  _errors.py  _version.py  query.py  transport.py  types.py
tests/: test_types.py
